tests/NormalTests/paczka2/big_fuzzy/48231426.err
Error in line 12: 0Y24MNp S371 20,9
Error in line 11: NjQ9bFbdL A992 97,6
Error in line 41: nyPrhas0f S371 23,1
Error in line 45: 0Y24MNp A566 36,3
Error in line 54: 0Y24MNp A566 4,6
Error in line 49: NjQ9bFbdL A992 391,5
Error in line 61: 9IiRk4gRFY S371 59,3
Error in line 71: NjQ9bFbdL A992 43,5
Error in line 79: A992 A992 2,4
Error in line 83: Y7otTP4M2 A566 53,3
Error in line 87: Y7otTP4M2 S371 64,6
Error in line 98: sJsq6WKy A566 f4,f
Error in line 103: NjQ9bFbdL S371 -5,9
Error in line 104: nyPrhas0f S37Ñ 95,6
Error in line 124: NjQ9bFbdL A319 15,9
Error in line 130: nyPrhas0f A566 41,44
Error in line 121: A992 A319 30,9
Error in line 140: Y7otTP4M2 S371 244,6
Error in line 143: nyPrhas0f A992 8?,6
Error in line 114: sJsq6WKy A566 313,7
Error in line 152: A992 S371 21,2
Error in line 128: nyPrhas0f A566 42,2
Error in line 153: A992 A566 65,2
Error in line 156: nyPrhas0f A992 335,6
Error in line 164: 9IiRk4gRFY A566 -5,8
Error in line 158: Y7otTP4M2 A992 81,3
Error in line 166: A992 A319 90,5
Error in line 169: NjQ9bFbdL A319 39,9
Error in line 172: NjQ9bFbdL A566 18,5
Error in line 179: NjQ9bFbdL S371 50,8
Error in line 159: nyPrhas0f A319 21,2
Error in line 163: 9IiRk4gRFY A566 69,4
Error in line 187: 9IiRk4gRFY S371 69,6
Error in line 193: A992 A566 77,9
Error in line 191: Y7otTP4M2 A992 18,1
Error in line 200: A992 S371 73,3
Error in line 232: 9IiRk4gRFY S371 76,4
Error in line 240: 9IiRk4gRFY A566 90,8
Error in line 241: sJsq6WKy A566 87,9
